--- a/theory/templates/theory/lessons/basic_definitions.html
+++ b/theory/templates/theory/lessons/basic_definitions.html
@@ -59,6 +59,8 @@
     количество языков, т.е. подмножеств множества всех возможных цепочек
     (континуум, т.к. число подмножеств счетного множества имеет мощность континуум).</p>
 
+<p><strong>Определение.</strong><br>Язык <span class="math inline">\(L\)</span> называется автоматным, если существует конечный автомат, допускающий <span class="math inline">\(L\)</span>.</p>
+
 <h5 class="mb-3 mt-5">Примеры языков.</h5>
 
 
