--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -149,18 +149,17 @@
                                         <label for="inputUsername">Email</label>
                                         <input type="email" class="form-control" id="inputUsername"
                                             aria-describedby="emailHelp" placeholder="Email" required>
-                                        <small id="emailHelp" class="form-text text-muted">Enter your registred E-mail
-                                            ID</small>
+                                        <small id="emailHelp" class="form-text text-muted">Введите зарегистрированный E-mail</small>
                                     </div>
 
                                     <div class="form-group">
-                                        <label for="inputPassword">Password</label>
+                                        <label for="inputPassword">Пароль</label>
                                         <input type="password" name="password" class="form-control" id="inputPassword"
-                                            placeholder="Password" required>
+                                            placeholder="Пароль" required>
                                         <div id="errorlogin" style="color:red"></div>
                                     </div>
                                     <button type="button" class="btn btn-primary btn-lg btn-block login-btn"
-                                        style="max-width:500px" onclick="login()" id="login_btn">Login</button>
+                                        style="max-width:500px" onclick="login()" id="login_btn">Войти</button>
 
                                 </form>
                             </div>
