--- a/practice/templates/practice/tasks/accordance.html
+++ b/practice/templates/practice/tasks/accordance.html
@@ -58,7 +58,10 @@
       </div>
     </div>
   </div>
-  <p id="result"></p>
+  <div id="display_result" style="display: none;">
+      <p id="result"></p>
+      <button class="btn btn-primary" id="btn_repeat">Повторить</button>
+  </div>
   <div id="answer_request">
         <div class="radio">
             <input type="radio" name="radio" id="radio1" value="1" checked="" />
@@ -79,7 +82,6 @@
     
     <br>
     <p id="nnn" style="display:none;">{{ tasks_number }}</p>
-    <p id="result"></p>
     <button class="btn btn-success btn-block" id="btn_accept">Подтвердить</button>
   </div>
   <button class="btn btn-primary btn-block" id="btn_repeat" hidden>Повторить</button>
