--- a/practice/templates/practice/tasks/expression_belongs.html
+++ b/practice/templates/practice/tasks/expression_belongs.html
@@ -29,7 +29,10 @@
     <p>Принадлежит ли слово данному регулярному выражению?</p>
     <p id="statement">loading...</p><br>
     <p id="nnn" style="display:none;">{{ tasks_number }}</p>
-    <p id="result"></p>
+    <div id="display_result" style="display: none;">
+        <p id="result"></p>
+        <button class="btn btn-primary" id="btn_repeat">Повторить</button>
+    </div>
 
     <div class="row" id="answer_request">
       <div class="col">
