--- a/practice/templates/practice/tasks/lang_description.html
+++ b/practice/templates/practice/tasks/lang_description.html
@@ -31,7 +31,10 @@
       <form >
           {% csrf_token %}
           <div class="form-group mb-3 mt-">
-              <label for="inputRegex"><p class="mt-4 mb-2">Какое регулярное выражение ему соответствует?</p></label>
+              <label for="inputRegex"><p class="mt-4 mb-2">
+                Какое регулярное выражение ему соответствует?<br>(Введите ответ без пробелов, используя следующие операции: сумма (a+b), произведение (ab), итерация (a*), скобки для группировки).</p>
+                <p><i>Например.</i> a*+bc</p>
+              </label>
               <input class="form-control noresize w-50 " rows="1" placeholder="Введите здесь" type="text" id="inputRegex" name="q" required>
           </div>
           <input type="hidden" name="answer" id="answer">
@@ -39,7 +42,10 @@
       </form>
   </div>
   <p id="nnn" style="display:none;">{{ tasks_number }}</p>
-  <p id="result" ></p>
+  <div id="display_result" style="display: none;">
+      <p id="result"></p>
+      <button class="mt-3 btn btn-primary" id="btn_repeat">Повторить</button>
+  </div>
     
   </div>
 </div>
