--- a/practice/templates/practice/tasks/task_DFA_to_regex.html
+++ b/practice/templates/practice/tasks/task_DFA_to_regex.html
@@ -37,7 +37,10 @@
         </form>
     </div>
     <p id="nnn" style="display:none;">{{ tasks_number }}</p>
-    <p id="result" style="display: none;"></p>
+    <div id="display_result" style="display: none;">
+        <p id="result"></p>
+        <button class="btn btn-primary" id="btn_repeat">Повторить</button>
+      </div>
   </div>
 </div>
 
