--- a/theory/templates/theory/lessons/DFA_to_regex.html
+++ b/theory/templates/theory/lessons/DFA_to_regex.html
@@ -3,13 +3,15 @@
 
 {% block doc %}
 <div class="jumbotron">
-    <div class="container">
+  <div class="container">
     <h3 class="mb-3">Преобразование ДКА в регулярное выражение</h3>
-    <p>Существуют два популярных метода для преоброзования ДНА в соответствующее им регулярное выражение: метод Ардена (<i>Arden’s Method</i>) и метод исключения состояний (<i>State Elimination Method</i>).</p>
+    <p>Существуют два популярных метода для преоброзования ДНА в соответствующее им регулярное выражение: метод Ардена
+      (<i>Arden’s Method</i>) и метод исключения состояний (<i>State Elimination Method</i>).</p>
     <p>Мы рассмотрим с вами последний из них.</p>
-    </div>
+  </div>
 </div>
-<h5 class="mb-3">Преобразование детерминированного конечного автомата в регулярное выражение методом исключения состояний.</h5>
+<h5 class="mb-3">Преобразование детерминированного конечного автомата в регулярное выражение методом исключения
+  состояний.</h5>
 <p><i>Алгоритм:</i></p>
 <p><i>Вход.</i> КА </p>
 
@@ -17,19 +19,39 @@
 
 <p><i>Метод.</i> Включает следующие шаги:</p>
 
-<p><h6>Шаг 1.</h6>Если существует какое-либо входящее ребро в начальное состояние, то создаем новое начальное состояние, не имеющее входящего ребра.</p>
+<p>
+  <h6>Шаг 1.</h6>Если существует какое-либо входящее ребро в начальное состояние, то создаем новое начальное состояние,
+  не имеющее входящего ребра.
+</p>
 
 <img class="img-theory" id="graph_0" src="{% static 'media/DFA_to_regex/graph_0.png' %}" alt="graph_0">
 
-<p><h5 class="step">Шаг 2.</h5><i>Важно!</i> В КНА должно быть только одно конечное состояние.<br> Если в ДКА существует несколько конечных состояний, преобразуем все конечные состояния в неконечные и создаем новое единственное конечное состояние.</p>
+<p>
+  <h5 class="step">Шаг 2.</h5><i>Важно!</i> В КНА должно быть только одно конечное состояние.<br> Если в ДКА существует
+  несколько конечных состояний, преобразуем все конечные состояния в неконечные и создаем новое единственное конечное
+  состояние.
+</p>
 <img class="img-theory" id="graph_1" src="{% static 'media/DFA_to_regex/graph_1.png' %}" alt="graph_1">
 
-<p><h5 class="mb-2">Шаг 3.</h5><i>Важно!</i> Конечное состояние КНА не должно иметь какого-либо исходящего преимущества.<br>Если существует какое-либо исходящее ребро из конечного состояния, то создаем новое конечное состояние, не имеющее выходного ребра из него.</p>
+<p>
+  <h5 class="mb-2">Шаг 3.</h5><i>Важно!</i> Конечное состояние КНА не должно иметь какого-либо исходящего
+  преимущества.<br>Если существует какое-либо исходящее ребро из конечного состояния, то создаем новое конечное
+  состояние, не имеющее выходного ребра из него.
+</p>
 <img class="img-theory" id="graph_2" src="{% static 'media/DFA_to_regex/graph_2.png' %}" alt="graph_2">
 
-<p><h5 class="mb-2">Шаг 4.</h5>Устраняем все промежуточные состояния по одному.<br>Эти состояния могут быть устранены в любом порядке.</p>
+<p>
+  <h5 class="mb-2">Шаг 4.</h5>Устраняем все промежуточные состояния по одному.<br>Эти состояния могут быть устранены в
+  любом порядке.
+</p>
 
-<p><h5 class="mb-2 mt-5">В результате,</h5><ul><li>Только начальное состояние, переходящее в конечное состояние, останется.</li><li>Стоимость этого перехода является обязательным регулярным выражением.</li></ul></p>
+<p>
+  <h5 class="mb-2 mt-5">В результате,</h5>
+  <ul>
+    <li>Только начальное состояние, переходящее в конечное состояние, останется.</li>
+    <li>Стоимость этого перехода является обязательным регулярным выражением.</li>
+  </ul>
+</p>
 
 <p><i>На заметку.</i> Метод исключения состояний может быть применен к любым конечным автоматам.</p>
 
@@ -42,7 +64,8 @@
 
 <h5 class="mt-3">Решение:</h5>
 
-<p><h6 class="mb-2">Шаг 1.</h6>
+<p>
+  <h6 class="mb-2">Шаг 1.</h6>
   <ul>
     <li>Видим, что существует несколько конечных состояний.</li>
     <li>Значит, мы конвертируем их в одно конечное состояние.</li>
@@ -55,8 +78,11 @@
 <p>Теперь мы начинаем устранять промежуточные состояния.</p>
 <p>Во-первых, давайте удалим состояние <span class="math inline">\(q_{4}\)</span>.
   <ul>
-    <li>Смотрим: существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{4}\)</span>.</li>
-    <li>После устранения состояния <span class="math inline">\(q_{4}\)</span> помещаем прямой путь из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span class="math inline">\(b.e = b\)</span>.</li>
+    <li>Смотрим: существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span
+        class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{4}\)</span>.</li>
+    <li>После устранения состояния <span class="math inline">\(q_{4}\)</span> помещаем прямой путь из состояния <span
+        class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span
+        class="math inline">\(b.e = b\)</span>.</li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_2.png' %}" alt="problem_2">
@@ -64,8 +90,11 @@
 <h6>Шаг 3.</h6>
 <p>Теперь давайте удалим состояние <span class="math inline">\(q_{3}\)</span>.
   <ul>
-    <li>Опять смотрим: существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{3}\)</span>.</li>
-    <li>После устранения состояния <span class="math inline">\(q_{3}\)</span> мы помещаем прямой путь из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span class="math inline">\(c.e = c\)</span>.</li>
+    <li>Опять смотрим: существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span
+        class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{3}\)</span>.</li>
+    <li>После устранения состояния <span class="math inline">\(q_{3}\)</span> мы помещаем прямой путь из состояния <span
+        class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span
+        class="math inline">\(c.e = c\)</span>.</li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_3.png' %}" alt="problem_3">
@@ -73,8 +102,11 @@
 <h6>Шаг 4.</h6>
 <p>Теперь давайте удалим состояние <span class="math inline">\(q_{5}\)</span>.
   <ul>
-    <li>Существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{5}\)</span>.</li>
-    <li>После устранения состояния <span class="math inline">\(q_{5}\)</span> мы помещаем прямой путь из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span class="math inline">\(d.e = d\)</span>.</li>
+    <li>Существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span
+        class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{5}\)</span>.</li>
+    <li>После устранения состояния <span class="math inline">\(q_{5}\)</span> мы помещаем прямой путь из состояния <span
+        class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span
+        class="math inline">\(d.e = d\)</span>.</li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_4.png' %}" alt="problem_4">
@@ -83,10 +115,19 @@
 <p>Теперь давайте удалим состояние <span class="math inline">\(q_{2}\)</span>.
   <ul>
     <li>Существует путь, идущий из состояния q1 в состояние qf через состояние q2.</li>
-    <li>После устранения состояния <span class="math inline">\(q_{2}\)</span> мы помещаем прямой путь из состояния <span class="math inline">\(q_{1}\)</span> в состояние <span class="math inline">\(q_{f}\)</span>, имеющее стоимость <span class="math inline">\(a.(b+c+d)\)</span>.</li>
+    <li>После устранения состояния <span class="math inline">\(q_{2}\)</span> мы помещаем прямой путь из состояния <span
+        class="math inline">\(q_{1}\)</span> в состояние <span class="math inline">\(q_{f}\)</span>, имеющее стоимость
+      <span class="math inline">\(a.(b+c+d)\)</span>.</li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_5.png' %}" alt="problem_5">
+
+<h5 class="mt-5 mb-4">Визуализация:</h5>
+
+<div id="graph" style="text-align: center;"></div>
+
+<button class="btn btn-secondary" id="forward">Вперед</button>
+<button class="btn btn-secondary" id="back">Назад</button>
 
 <h5 class="mt-5">Получили регулярное выражение: <span class="math inline">\(a(b+c+d)\)</span></h5>
 
@@ -95,9 +136,16 @@
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 
+<script src="//d3js.org/d3.v4.min.js"></script>
+<script src="https://unpkg.com/viz.js@1.8.0/viz.js" type="javascript/worker"></script>
+<script src="https://unpkg.com/d3-graphviz@1.3.1/build/d3-graphviz.min.js"></script>
+
 {% load staticfiles %}
-  <script src="{% static 'js/viz.js/viz.js' %}"></script>
-  <script src="{% static 'js/viz.js/full.render.js' %}"></script>
-  <script>$('#DFA_to_regex').addClass('active');</script>
+<script src="{% static 'js/viz.js/viz.js' %}"></script>
+<script src="{% static 'js/viz.js/full.render.js' %}"></script>
+<script src="{% static 'js/theory/DFAtoregex_example.js' %}"></script>
+<script>
+  $('#DFA_to_regex').addClass('active');
+</script>
 
 {% endblock %}
