--- a/theory/templates/theory/lessons/FA.html
+++ b/theory/templates/theory/lessons/FA.html
@@ -46,11 +46,11 @@
     состоящую из состояния и символа алфавита, но и пару, состоящую из состояния и
     специального символа ε. В этом случае говорят, что автомат может совершать спонтанные εпереходы из одного состояния в другое, не читая при этом следующий символ строки.</p>
 
-<p><i>Примечание.</i> ε-НКА полезны при рассмотрении вопроса о построении автоматов по регулярным выражениям (см. "Построение ДКА по регулярному выражению").</p>
+<p><i>Примечание.</i> ε-НКА полезны при рассмотрении вопроса о построении автоматов по регулярным выражениям (см. "Построение НКА по регулярному выражению").</p>
 <hr>
 <h5 class="mt-5 mb-3">Конечный автомат-распознаватель.</h5>
 <p>Автомат <span class="math inline">\(M = {\displaystyle (Q,\Sigma ,\delta ,q_{0},F)}\)</span> допускает строку <span class="math inline">\(w = w_{1}w_{2} \ldots w_{n}\)</span>, где
-    wi ∈ Σ, если существует последовательность состояний r0, r1, . . . , rn, такая что:</p>
+    <span class="math inline">\(w_i ∈ Σ\)</span>, если существует последовательность состояний <span class="math inline">\(r_0, r_1, \ldots , r_n\)</span>, такая что:</p>
 <p>
     <ol>
         <li><p><span class="math inline">\( \large r_{0} = q_{0}\)</span></p></li>
@@ -59,7 +59,7 @@
     </ol>
 </p>
 
-<p>т.е. автомат M распознает язык A = {w | M допускает w}. <br> Неформально: aвтомат M допускает язык A, если он допускает все цепочки этого языка, и только их.</p>
+<p>т.е. автомат <span class="math inline">\(M\)</span> распознает язык <span class="math inline">\(A = \{w | M \text{ допускает } w \} .\)</span> <br> Неформально: aвтомат <span class="math inline">\(M\)</span> допускает язык <span class="math inline">\(A\)</span>, если он допускает все цепочки этого языка, и только их.</p>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 <script>$('#FA').addClass('active');</script>
