--- a/theory/templates/theory/lessons/DFA_to_regex.html
+++ b/theory/templates/theory/lessons/DFA_to_regex.html
@@ -18,42 +18,44 @@
 <p><i>Выход.</i> НКА <span class="math inline">\(N\): \(L(N) = L(r)\)</span></p>
 
 <p><i>Метод.</i> Включает следующие шаги:</p>
-
+<h5 class="mt-5">Шаг 1.</h5>
 <p>
-  <h6>Шаг 1.</h6>Если существует какое-либо входящее ребро в начальное состояние, то создаем новое начальное состояние,
+  Если существует какое-либо входящее ребро в начальное состояние, то создаем новое начальное состояние,
   не имеющее входящего ребра.
 </p>
 
 <img class="img-theory" id="graph_0" src="{% static 'media/DFA_to_regex/graph_0.png' %}" alt="graph_0">
-
+<h5 class="mt-5">Шаг 2.</h5>
 <p>
-  <h5 class="step">Шаг 2.</h5><i>Важно!</i> В КНА должно быть только одно конечное состояние.<br> Если в ДКА существует
+  <i>Важно!</i> В КНА должно быть только одно конечное состояние.<br> Если в ДКА существует
   несколько конечных состояний, преобразуем все конечные состояния в неконечные и создаем новое единственное конечное
   состояние.
 </p>
 <img class="img-theory" id="graph_1" src="{% static 'media/DFA_to_regex/graph_1.png' %}" alt="graph_1">
 
+<h5 class="mt-5">Шаг 3.</h5>
 <p>
-  <h5 class="mb-2">Шаг 3.</h5><i>Важно!</i> Конечное состояние КНА не должно иметь какого-либо исходящего
+  <i>Важно!</i> Конечное состояние КНА не должно иметь какого-либо исходящего
   преимущества.<br>Если существует какое-либо исходящее ребро из конечного состояния, то создаем новое конечное
   состояние, не имеющее выходного ребра из него.
 </p>
 <img class="img-theory" id="graph_2" src="{% static 'media/DFA_to_regex/graph_2.png' %}" alt="graph_2">
 
+<h5 class="mt-5">Шаг 4.</h5>
 <p>
-  <h5 class="mb-2">Шаг 4.</h5>Устраняем все промежуточные состояния по одному.<br>Эти состояния могут быть устранены в
+  Устраняем все промежуточные состояния по одному.<br>Эти состояния могут быть устранены в
   любом порядке.
 </p>
 
 <p>
-  <h5 class="mb-2 mt-5">В результате,</h5>
+  <h5 class="mb-4 mt-5">В результате,</h5>
   <ul>
-    <li>Только начальное состояние, переходящее в конечное состояние, останется.</li>
-    <li>Стоимость этого перехода является обязательным регулярным выражением.</li>
+    <li><p>Только начальное состояние, переходящее в конечное состояние, останется.</p></li>
+    <li><p>Стоимость этого перехода является обязательным регулярным выражением.</p></li>
   </ul>
 </p>
 
-<p><i>На заметку.</i> Метод исключения состояний может быть применен к любым конечным автоматам.</p>
+<p class="mt-4"><i>На заметку.</i> Метод исключения состояний может быть применен к любым конечным автоматам.</p>
 
 <hr>
 <h5 class="mt-5 mb-3">Рассмотрим описанный выше метод на примере:</h5>
@@ -64,11 +66,11 @@
 
 <h5 class="mt-3">Решение:</h5>
 
+<h6 class="mt-3">Шаг 1.</h6>
 <p>
-  <h6 class="mb-2">Шаг 1.</h6>
   <ul>
-    <li>Видим, что существует несколько конечных состояний.</li>
-    <li>Значит, мы конвертируем их в одно конечное состояние.</li>
+    <li><p>Видим, что существует несколько конечных состояний.</p></li>
+    <li><p>Значит, мы конвертируем их в одно конечное состояние.</p></li>
   </ul>
 </p>
 <p>Полученный DFA:</p>
@@ -78,11 +80,11 @@
 <p>Теперь мы начинаем устранять промежуточные состояния.</p>
 <p>Во-первых, давайте удалим состояние <span class="math inline">\(q_{4}\)</span>.
   <ul>
-    <li>Смотрим: существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span
-        class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{4}\)</span>.</li>
-    <li>После устранения состояния <span class="math inline">\(q_{4}\)</span> помещаем прямой путь из состояния <span
+    <li><p>Смотрим: существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span
+        class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{4}\)</span>.</p></li>
+    <li><p>После устранения состояния <span class="math inline">\(q_{4}\)</span> помещаем прямой путь из состояния <span
         class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span
-        class="math inline">\(b.e = b\)</span>.</li>
+        class="math inline">\(b.ε = b\)</span>.</p></li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_2.png' %}" alt="problem_2">
@@ -90,11 +92,11 @@
 <h6>Шаг 3.</h6>
 <p>Теперь давайте удалим состояние <span class="math inline">\(q_{3}\)</span>.
   <ul>
-    <li>Опять смотрим: существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span
-        class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{3}\)</span>.</li>
-    <li>После устранения состояния <span class="math inline">\(q_{3}\)</span> мы помещаем прямой путь из состояния <span
+    <li><p>Cмотрим: существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span
+        class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{3}\)</span>.</p></li>
+    <li><p>После устранения состояния <span class="math inline">\(q_{3}\)</span> мы помещаем прямой путь из состояния <span
         class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span
-        class="math inline">\(c.e = c\)</span>.</li>
+        class="math inline">\(c.ε = c\)</span>.</p></li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_3.png' %}" alt="problem_3">
@@ -102,11 +104,11 @@
 <h6>Шаг 4.</h6>
 <p>Теперь давайте удалим состояние <span class="math inline">\(q_{5}\)</span>.
   <ul>
-    <li>Существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span
-        class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{5}\)</span>.</li>
-    <li>После устранения состояния <span class="math inline">\(q_{5}\)</span> мы помещаем прямой путь из состояния <span
+    <li><p>Существует путь, идущий из состояния <span class="math inline">\(q_{2}\)</span> в состояние <span
+        class="math inline">\(q_{f}\)</span> через состояние <span class="math inline">\(q_{5}\)</span>.</p></li>
+    <li><p>После устранения состояния <span class="math inline">\(q_{5}\)</span> мы помещаем прямой путь из состояния <span
         class="math inline">\(q_{2}\)</span> в состояние <span class="math inline">\(q_{f}\)</span> со стоимостью <span
-        class="math inline">\(d.e = d\)</span>.</li>
+        class="math inline">\(d.ε = d\)</span>.</p></li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_4.png' %}" alt="problem_4">
@@ -114,10 +116,10 @@
 <h6>Шаг 5.</h6>
 <p>Теперь давайте удалим состояние <span class="math inline">\(q_{2}\)</span>.
   <ul>
-    <li>Существует путь, идущий из состояния q1 в состояние qf через состояние q2.</li>
-    <li>После устранения состояния <span class="math inline">\(q_{2}\)</span> мы помещаем прямой путь из состояния <span
+    <li><p>Существует путь, идущий из состояния <span class="math inline">\(q_1\)</span> в состояние <span class="math inline">\(q_f\)</span> через состояние <span class="math inline">\(q_2\)</span>.</p></li>
+    <li><p>После устранения состояния <span class="math inline">\(q_{2}\)</span> мы помещаем прямой путь из состояния <span
         class="math inline">\(q_{1}\)</span> в состояние <span class="math inline">\(q_{f}\)</span>, имеющее стоимость
-      <span class="math inline">\(a.(b+c+d)\)</span>.</li>
+      <span class="math inline">\(a.(b+c+d)\)</span>.</p></li>
   </ul>
 </p>
 <img class="img-theory" src="{% static 'media/DFA_to_regex/problem_5.png' %}" alt="problem_5">
