--- a/theory/templates/theory/lessons/intro.html
+++ b/theory/templates/theory/lessons/intro.html
@@ -7,13 +7,12 @@
         <p>В данном кратком руководстве рассматриваются следющие разделы:</p>
         
         <ol>
-            <li><p>Регулярные множества и выражения</p></li>
-            <li><p>Эквивалентность регулярных выражений</p></li>
-            <li><p>Конечные автоматы</p></li>
-            <li><p>Автоматные языки</p></li>
-            <li><p>Построение НКА по регулярному выражению</p></li>
-            <li><p>Построение ДКА по НКА</p></li>
-            <li><p>Преобразование ДКА в регулярное выражение</p></li>
+            <li><p><a href="{% url 'basic_definitions' %}">Регулярные множества и выражения</a></p></li>
+            <li><p><a href="{% url 'regex_equivalence' %}">Эквивалентность регулярных выражений</a></p></li>
+            <li><p><a href="{% url 'FA' %}">Конечные автоматы</a></p></li>
+            <li><p><a href="{% url 'regex_to_NFA' %}">Построение НКА по регулярному выражению</a></p></li>
+            <li><p><a href="{% url 'NFA_to_DFA' %}">Построение ДКА по НКА</a></p></li>
+            <li><p><a href="{% url 'DFA_to_regex' %}">Преобразование ДКА в регулярное выражение</a></p></li>
         </ol>
     </div>
 </div>
