--- a/theory/templates/theory/lessons/basic_definitions.html
+++ b/theory/templates/theory/lessons/basic_definitions.html
@@ -62,7 +62,11 @@
 <p><strong>Определение.</strong><br>Язык <span class="math inline">\(L\)</span> называется автоматным, если существует конечный автомат, допускающий <span class="math inline">\(L\)</span>.</p>
 
 <h5 class="mb-3 mt-5">Примеры языков.</h5>
-
+<ul>
+    <li><p><span class="math inline">\( \sum = \{ a, b, c\} , L= \{ a^nbc^n \} \)</span></p></li>
+    <li><p><span class="math inline">\( \sum = \{ 0, 1\} , L= \{ \text{ множество чётных двоичных чисел } \} \)</span></p></li>
+    <li><p><span class="math inline">\( \sum = \{ a, b, c\} , L= \{ a, bb, abc, ca \} \)</span> (конечный язык)</p></li>
+</ul>
 
 <h5 class="mb-3 mt-5">Регулярные множества. Формальное определение</h5>
 
