--- a/profilePage/templates/profilePage/profile.html
+++ b/profilePage/templates/profilePage/profile.html
@@ -34,10 +34,12 @@
                 <th>{{category}}</th>
                 {% for question in completed_questions|get_item:category %}
                 <td style="text-align:center">
-                    {% if question %}
+                    {% if question == "1" %}
                         <i class="fas fa-check-circle"></i>
-                    {% else %}
+                    {% elif question == "0" %}
                         <i class="far fa-circle"></i>
+                    {% else %}
+                        <i class="far fa-circle" style="color: #ced4da;"></i>
                     {% endif %}
                 </td>
                 {% endfor %}
