--- a/mainApp/templates/mainApp/home.html
+++ b/mainApp/templates/mainApp/home.html
@@ -2,42 +2,44 @@
 
 {% block content %}
 <div class="jumbotron">
-<div class="container-fluid">
-<div class="continer">
-    <main role="main">
-        <div class="jumborton">
-            <div class="col-sm-8 mx-auto">
-                <h1>Регулярные выражения</h1>
-                <br>
-                <p>Механизм регулярных выражений нашел применение во многих программных продуктах, входит
-                    в стандартную библиотеку или даже является частью языка программирования.</p><p>При помощи
-                    регулярных выражений можно достаточно просто описать любой регулярный язык, а для
-                    регулярных языков существуют простые алгоритмы проверки принадлежности цепочки заданному
-                    языку.</p>
-                <p class="mt-5"><a class="btn btn-primary btn-lg" href="{% url 'intro' %}" role="button" style="padding: .5rem 2rem !important;">Перейти к теории</a></p>
-            </div>
+    <div class="container-fluid">
+        <div class="continer">
+            <main role="main">
+                <div class="jumborton">
+                    <div class="col-sm-8 mx-auto">
+                        <h1>Регулярные выражения</h1>
+                        <br>
+                        <p>Механизм регулярных выражений нашел применение во многих программных продуктах, входит
+                            в стандартную библиотеку или даже является частью языка программирования.</p>
+                        <p>При помощи
+                            регулярных выражений можно достаточно просто описать любой регулярный язык, а для
+                            регулярных языков существуют простые алгоритмы проверки принадлежности цепочки заданному
+                            языку.</p>
+                        <p class="mt-5"><a class="btn btn-primary btn-lg" href="{% url 'intro' %}" role="button"
+                                style="padding: .5rem 2rem !important;">Перейти к теории</a></p>
+                    </div>
+                </div>
+            </main>
         </div>
-    </main>
-</div>
-</div>
+    </div>
 </div>
 
 
 <script type="text/javascript">
-$('#logClick').click(function(e) {
+    $('#logClick').click(function (e) {
         e.preventDefault();
-        $( '#reg-nav-item' ).removeClass( 'active' );
-        $( '#log-nav-item' ).addClass( 'active' );
-});
-    
-$('#regClick').click(function(e) {
-    e.preventDefault();
-    $( '#reg-nav-item' ).addClass( 'active' );
-    $( '#log-nav-item' ).removeClass( 'active' );
-});
+        $('#reg-nav-item').removeClass('active');
+        $('#log-nav-item').addClass('active');
+    });
 
-$( '.navbar-nav' ).find( 'li.active' ).removeClass( 'active' );
-$( '#main_tab' ).addClass( 'active' );
+    $('#regClick').click(function (e) {
+        e.preventDefault();
+        $('#reg-nav-item').addClass('active');
+        $('#log-nav-item').removeClass('active');
+    });
+
+    $('.navbar-nav').find('li.active').removeClass('active');
+    $('#main_tab').addClass('active');
 </script>
 
 {% endblock %}
