--- a/practice/templates/practice/tasks/accordance.html
+++ b/practice/templates/practice/tasks/accordance.html
@@ -22,77 +22,82 @@
 </nav>
 
 <div class="jumbotron">
-    <div class="container">
+  <div class="container">
     <h5>Дано регулярное выражение:</h5>
-    <p>Начальное состояние выделено красным, финальные (допускающие) - в двойном кружке, не допускающие - в одинарном.</p>
+    <p>Начальное состояние выделено красным, финальные (допускающие) - в двойном кружке, не допускающие - в одинарном.
+    </p>
     <br>
-    <p id="regex_assignment"><!-- Target for dynamic svg generation --></p>
+    <p id="regex_assignment">
+      <!-- Target for dynamic svg generation -->
+    </p>
     <hr>
     <p>Выберете конечный автомат, соответствующий данному регулярному выражению:</p><br>
 
     <div class="row">
       <div class="col-md-11">
 
-      <div class="col-md-10 gallery-FSM">
-        <div id="graph_1"></div>
-        <h4 class="text-center my-3">1</h4>
-      </div>
+        <div class="col-md-10 gallery-FSM">
+          <div id="graph_1"></div>
+          <h4 class="text-center my-3">1</h4>
+        </div>
 
-      <div class="col-md-10 gallery-FSM">
-        <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(96).jpg">
-          <div alt="Lights" style="width:100%" id="graph_2"></div>
-        </a>
-        <h4 class="text-center my-3">2</h4>
-      </div>
+        <div class="col-md-10 gallery-FSM">
+          <a href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(96).jpg">
+            <div alt="Lights" style="width:100%" id="graph_2"></div>
+          </a>
+          <h4 class="text-center my-3">2</h4>
+        </div>
 
-      <div class="col-md-10 gallery-FSM">
-        <a class="black-text" href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(104).jpg">
-          <div alt="Lights" style="width:100%" id="graph_3"></div>
-        </a>
-        <h4 class="text-center my-3">3</h4>
-      </div>
+        <div class="col-md-10 gallery-FSM">
+          <a class="black-text" href="https://mdbootstrap.com/img/Photos/Horizontal/Nature/12-col/img%20(104).jpg">
+            <div alt="Lights" style="width:100%" id="graph_3"></div>
+          </a>
+          <h4 class="text-center my-3">3</h4>
+        </div>
 
-      <div class="col-md-10 gallery-FSM">
-        <div alt="Lights" style="width:100%" id="graph_4"></div>
-        <h4 class="text-center my-3">4</h4>
+        <div class="col-md-10 gallery-FSM">
+          <div alt="Lights" style="width:100%" id="graph_4"></div>
+          <h4 class="text-center my-3">4</h4>
+        </div>
       </div>
     </div>
-  </div>
-  <div id="display_result" style="display: none;">
+    <div id="display_result" style="display: none;">
       <p id="result"></p>
       <button class="btn btn-primary" id="btn_repeat">Повторить</button>
+    </div>
+    <div id="answer_request">
+      <div class="radio">
+        <input type="radio" name="radio" id="radio1" value="1" checked="" />
+        <label for="radio1">Вариант 1</label>
+      </div>
+      <div class="radio">
+        <input type="radio" name="radio" id="radio2" value="2" />
+        <label for="radio2">Вариант 2</label>
+      </div>
+      <div class="radio">
+        <input type="radio" name="radio" id="radio3" value="3" />
+        <label for="radio3">Вариант 3</label>
+      </div>
+      <div class="radio">
+        <input type="radio" name="radio" id="radio4" value="4" />
+        <label for="radio4">Вариант 4</label>
+      </div>
+
+      <br>
+      <p id="nnn" style="display:none;">{{ tasks_number }}</p>
+      <button class="btn btn-success btn-block" id="btn_accept">Подтвердить</button>
+    </div>
+    <button class="btn btn-primary btn-block" id="btn_repeat" hidden>Повторить</button>
   </div>
-  <div id="answer_request">
-        <div class="radio">
-            <input type="radio" name="radio" id="radio1" value="1" checked="" />
-            <label for="radio1">Вариант 1</label>
-        </div>
-        <div class="radio">
-            <input type="radio" name="radio" id="radio2" value="2" />
-            <label for="radio2">Вариант 2</label>
-        </div>
-        <div class="radio">
-            <input type="radio" name="radio" id="radio3" value="3" />
-            <label for="radio3">Вариант 3</label>
-        </div>
-        <div class="radio">
-            <input type="radio" name="radio" id="radio4" value="4" />
-            <label for="radio4">Вариант 4</label>
-        </div>
-    
-    <br>
-    <p id="nnn" style="display:none;">{{ tasks_number }}</p>
-    <button class="btn btn-success btn-block" id="btn_accept">Подтвердить</button>
-  </div>
-  <button class="btn btn-primary btn-block" id="btn_repeat" hidden>Повторить</button>
-</div>
 </div>
 
 {% load staticfiles%}
-  <script src="{% static 'js/practice/accordance.js' %}"></script>
-  <script src="{% static 'js/viz.js/viz.js' %}"></script>
-  <script src="{% static 'js/viz.js/full.render.js' %}"></script>
-  <script src="{% static 'js/practice/moving.js' %}"></script>
-  <script src="{% static 'js/practice/results.js' %}"></script>
-  <script>$('#accordance').addClass('active');</script>
+<script src="{% static 'js/practice/accordance.js' %}"></script>
+<script src="{% static 'js/viz.js/viz.js' %}"></script>
+<script src="{% static 'js/viz.js/full.render.js' %}"></script>
+<script src="{% static 'js/practice/moving.js' %}"></script>
+<script src="{% static 'js/practice/results.js' %}"></script>
+<script>
+  $('#accordance').addClass('active');
+</script>
 {% endblock %}
