--- a/practice/templates/practice/tasks/lang_description.html
+++ b/practice/templates/practice/tasks/lang_description.html
@@ -22,31 +22,34 @@
 </nav>
 
 <div class="jumbotron">
-    <div class="container">
+  <div class="container">
     <h5>Дано описание регулярного языка:</h5>
     <br>
     <p id="description"></p>
     <hr>
     <div id="answer_request">
-      <form >
-          {% csrf_token %}
-          <div class="form-group mb-3 mt-">
-              <label for="inputRegex"><p class="mt-4 mb-2">
-                Какое регулярное выражение ему соответствует?<br>(Введите ответ без пробелов, используя следующие операции: сумма (a+b), произведение (ab), итерация (a*), скобки для группировки).</p>
-                <p><i>Например.</i> a*+bc</p>
-              </label>
-              <input class="form-control noresize w-50 " rows="1" placeholder="Введите здесь" type="text" id="inputRegex" name="q" required>
-          </div>
-          <input type="hidden" name="answer" id="answer">
-          <button type="submit" class="btn btn-primary" id="btn_accept">Подтвердить</button>
+      <form>
+        {% csrf_token %}
+        <div class="form-group mb-3 mt-">
+          <label for="inputRegex">
+            <p class="mt-4 mb-2">
+              Какое регулярное выражение ему соответствует?<br>(Введите ответ без пробелов, используя следующие
+              операции: сумма (a+b), произведение (ab), итерация (a*), скобки для группировки).</p>
+            <p><i>Например.</i> a*+bc</p>
+          </label>
+          <input class="form-control noresize w-50 " rows="1" placeholder="Введите здесь" type="text" id="inputRegex"
+            name="q" required>
+        </div>
+        <input type="hidden" name="answer" id="answer">
+        <button type="submit" class="btn btn-primary" id="btn_accept">Подтвердить</button>
       </form>
-  </div>
-  <p id="nnn" style="display:none;">{{ tasks_number }}</p>
-  <div id="display_result" style="display: none;">
+    </div>
+    <p id="nnn" style="display:none;">{{ tasks_number }}</p>
+    <div id="display_result" style="display: none;">
       <p id="result"></p>
       <button class="mt-3 btn btn-primary" id="btn_repeat">Повторить</button>
-  </div>
-    
+    </div>
+
   </div>
 </div>
 </div>
@@ -57,5 +60,7 @@
 <script src="{% static 'js/practice/lang_description.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
 <script src="{% static 'js/practice/results.js' %}"></script>
-<script>$('#lang_description').addClass('active');</script>
+<script>
+  $('#lang_description').addClass('active');
+</script>
 {% endblock %}
