--- a/practice/templates/practice/tasks/task_DFA_to_regex.html
+++ b/practice/templates/practice/tasks/task_DFA_to_regex.html
@@ -22,25 +22,32 @@
 </nav>
 
 <div class="jumbotron">
-    <div class="container">
+  <div class="container">
     <h5>Дан конечный автомат-распознаватель:</h5>
-    <br><div id="graphviz_svg"><!-- Target for dynamic svg generation --></div><hr>
+    <br>
+    <div id="graphviz_svg">
+      <!-- Target for dynamic svg generation -->
+    </div>
+    <hr>
     <div id="answer_request">
-        <form>
-            {% csrf_token %}
-            <div class="form-group mb-3 mt-">
-                <label for="inputRegex"><p class="mt-4 mb-2">Какое регулярное выражение ему соответствует?</p></label>
-                <input class="form-control noresize w-50 " rows="1" placeholder="Введите здесь" required="required" type="text" id="inputRegex" name="q" required>
-            </div>
-            <input type="hidden" name="answer" id="answer">
-            <button type="submit" class="btn btn-primary" id="btn_accept" >Подтвердить</button>
-        </form>
+      <form>
+        {% csrf_token %}
+        <div class="form-group mb-3 mt-">
+          <label for="inputRegex">
+            <p class="mt-4 mb-2">Какое регулярное выражение ему соответствует?</p>
+          </label>
+          <input class="form-control noresize w-50 " rows="1" placeholder="Введите здесь" required="required"
+            type="text" id="inputRegex" name="q" required>
+        </div>
+        <input type="hidden" name="answer" id="answer">
+        <button type="submit" class="btn btn-primary" id="btn_accept">Подтвердить</button>
+      </form>
     </div>
     <p id="nnn" style="display:none;">{{ tasks_number }}</p>
     <div id="display_result" style="display: none;">
-        <p id="result"></p>
-        <button class="btn btn-primary" id="btn_repeat">Повторить</button>
-      </div>
+      <p id="result"></p>
+      <button class="btn btn-primary" id="btn_repeat">Повторить</button>
+    </div>
   </div>
 </div>
 
@@ -50,6 +57,8 @@
 <script src="{% static 'js/practice/taskDFAtoregex.js' %}"></script>
 <script src="{% static 'js/practice/moving.js' %}"></script>
 <script src="{% static 'js/practice/results.js' %}"></script>
-<script>$('#task_DFA_to_regex').addClass('active');</script>
+<script>
+  $('#task_DFA_to_regex').addClass('active');
+</script>
 
 {% endblock %}
