--- a/theory/templates/theory/lessons/DFA_to_regex.html
+++ b/theory/templates/theory/lessons/DFA_to_regex.html
@@ -143,7 +143,7 @@
 <script src="https://unpkg.com/d3-graphviz@1.3.1/build/d3-graphviz.min.js"></script>
 
 {% load staticfiles %}
-<script src="{% static 'js/viz.js/viz.js' %}"></script>
+<!-- <script src="{% static 'js/viz.js/viz.js' %}"></script> -->
 <script src="{% static 'js/viz.js/full.render.js' %}"></script>
 <script src="{% static 'js/theory/DFAtoregex_example.js' %}"></script>
 <script>
