--- a/theory/templates/theory/lessons/DFA_to_regex.html
+++ b/theory/templates/theory/lessons/DFA_to_regex.html
@@ -128,8 +128,8 @@
 
 <div id="graph" style="text-align: center;"></div>
 
-<button class="btn btn-secondary" id="forward">Вперед</button>
-<button class="btn btn-secondary" id="back">Назад</button>
+<button class="btn btn-secondary" disabled id="back">Назад</button>
+<button class="btn btn-secondary" disabled id="forward">Вперед</button>
 
 <h5 class="mt-5">Получили регулярное выражение: <span class="math inline">\(a(b+c+d)\)</span></h5>
 
