new app calculator

--- a/mainApp/templates/mainApp/wrapper.html
+++ b/mainApp/templates/mainApp/wrapper.html
@@ -46,6 +46,8 @@
                     </li>
                     <li class="nav-item px-1" id="practice_tab"><a class="nav-link"
                             href="{% url 'chain_acceptance' %}">Практика</a></li>
+                    <li class="nav-item px-1" id="calculator_tab"><a class="nav-link"
+                            href="{% url 'calculator' %}">Калькулятор</a></li>
                 </ul>
                 {% if user.is_authenticated %}
                 <ul class="navbar-nav ml-auto">
