--- a/practice/templates/practice/tasks/lang_description.html
+++ b/practice/templates/practice/tasks/lang_description.html
@@ -37,7 +37,7 @@
               операции: сумма (a+b), произведение (ab), итерация (a*), скобки для группировки).</p>
             <p><i>Например.</i> a*+bc</p>
           </label>
-          <input class="form-control noresize w-50 " rows="1" placeholder="Введите здесь" type="text" id="inputRegex"
+          <input class="form-control noresize w-50 " rows="1" autocomplete="off" placeholder="Введите здесь" type="text" id="inputRegex"
             name="q" required>
         </div>
         <input type="hidden" name="answer" id="answer">
