--- a/practice/templates/practice/tasks/task_DFA_to_regex.html
+++ b/practice/templates/practice/tasks/task_DFA_to_regex.html
@@ -36,7 +36,7 @@
           <label for="inputRegex">
             <p class="mt-4 mb-2">Какое регулярное выражение ему соответствует?</p>
           </label>
-          <input class="form-control noresize w-50 " rows="1" placeholder="Введите здесь" required="required"
+          <input class="form-control noresize w-50 " rows="1" autocomplete="off" placeholder="Введите здесь" required="required"
             type="text" id="inputRegex" name="q" required>
         </div>
         <input type="hidden" name="answer" id="answer">
